Add an installer for windows